# exp-webassembly-golang-bazel

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod
.gitpod/: Dockerfile
app/: index.html
cmd/wasm/: BUILD.bazel  main.go
