load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude cmd/wasm
# gazelle:prefix github.com/jrbeverly/webassembly-golang-baseline
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=bazel/go/deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
