load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

genrule(
    name = "wasm_genrule",
    srcs = ["main.go"],
    outs = ["main.wasm"],
    cmd = "GO111MODULE=off GOOS=js GOARCH=wasm GOCACHE='/tmp' go build -o $@ $(location main.go)",
)

# # could not import "syscall/js"
# go_library(
#     name = "wasm_lib",
#     srcs = ["main.go"],
#     importpath = "github.com/jrbeverly/webassembly-golang-baseline/cmd/wasm",
#     visibility = ["//visibility:private"],
# )

# go_binary(
#     name = "wasm",
#     embed = [":wasm_lib"],
#     goarch = "wasm",
#     goos = "js",
#     visibility = ["//visibility:public"],
# )
